Bug 398920 - Invert filter outputs wrong results on 16 bits/integer images
Summary: Invert filter outputs wrong results on 16 bits/integer images
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-21 13:16 UTC by Alex
Modified: 2018-11-20 08:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Invert filter test on gradient (26.89 KB, application/x-krita)
2018-09-21 13:16 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2018-09-21 13:16:51 UTC
Created attachment 115142 [details]
Invert filter test on gradient

git: b94785f
windows

It seems invert filter is not working as expected. Take a look at kra file: left is original image, middle is invert done with color adjustments (correct, matches PS invert and invert from levels), right is invert filter.
Comment 1 vanyossi 2018-10-16 17:40:42 UTC
Git commit 6f05272d1bfc7e9c42e400038a6725d62d566c53 by Ivan Yossi.
Committed on 16/10/2018 at 17:38.
Pushed by ivany into branch 'master'.

Summary:
Fixes Invert filter for all but CMYK and LAB 32bit float
It seems the values are not normalized on inversion step.

Reviewers: #krita

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16207

M  +1    -2    libs/pigment/KoColorSpaceAbstract.h
M  +139  -6    libs/pigment/KoInvertColorTransformation.h
M  +0    -32   plugins/color/lcms2engine/colorspaces/rgb_u8/RgbU8ColorSpace.cpp
M  +0    -2    plugins/color/lcms2engine/colorspaces/rgb_u8/RgbU8ColorSpace.h

https://commits.kde.org/krita/6f05272d1bfc7e9c42e400038a6725d62d566c53
Comment 2 Halla Rempt 2018-11-20 08:58:06 UTC
Git commit 4d7268e9ad2dd51234ecb055032fb722443f393b by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 20/11/2018 at 08:23.
Pushed by rempt into branch 'krita/4.1'.

Summary:
Fixes Invert filter for all but CMYK and LAB 32bit float
It seems the values are not normalized on inversion step.

Reviewers: #krita

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16207

M  +1    -2    libs/pigment/KoColorSpaceAbstract.h
M  +139  -6    libs/pigment/KoInvertColorTransformation.h
M  +0    -32   plugins/color/lcms2engine/colorspaces/rgb_u8/RgbU8ColorSpace.cpp
M  +0    -2    plugins/color/lcms2engine/colorspaces/rgb_u8/RgbU8ColorSpace.h

https://commits.kde.org/krita/4d7268e9ad2dd51234ecb055032fb722443f393b