BUG:398920

Summary:
Fixes Invert filter for all but CMYK and LAB 32bit float
It seems the values are not normalized on inversion step.

Reviewers: #krita

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16207