libs/pigment/KoColorSpaceAbstract.h
@@ -35,7 +35,6 @@
 #include "KoConvolutionOpImpl.h"
 #include "KoInvertColorTransformation.h"
 
-
 /**
  * This in an implementation of KoColorSpace which can be used as a base for colorspaces with as many
  * different channels of the same type.
@@ -137,7 +136,7 @@ public:
     }
 
     KoColorTransformation* createInvertTransformation() const override {
-        return new KoInvertColorTransformation(this);
+        return KoInvertColorTransformation::getTransformator(this);
     }
 
     KoColorTransformation *createDarkenAdjustment(qint32 shade, bool compensate, qreal compensation) const override {
